# Rag-Chatbot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 4ce5e5e13da8_initial_migration.py
entrypoints/: web_entrypoint.sh
src/app/: main.py
src/app/api/v1/: context.py  messages.py  sessions.py
src/app/config/: chroma_client.py  database.py  logger.py  settings.py
src/app/domain/entities/: document.py  message.py  session.py
src/app/domain/interfaces/: llm_service.py  message_repository.py  session_repository.py  vector_repository.py
src/app/domain/value_objects/: session_id.py
src/app/errors/: errors.py
src/app/infrastructure/db/: models.py  session.py
src/app/infrastructure/encryption/: encryption_service.py
src/app/infrastructure/llm/: openai_service.py
src/app/infrastructure/repositories/: message_repository_sqlalchemy.py  session_repository_sqlalchemy.py  vector_store.py
src/app/infrastructure/utils/: text_splitter.py
src/app/middleware/: auth.py  error_handler.py  rate_limiter.py
src/app/schemas/: __init__.py  pagination.py
src/app/schemas/message/: __init__.py  queries.py  requests.py  responses.py
src/app/security/: auth.py
src/app/usecases/: create_context.py  create_message.py  create_session.py  delete_message.py  delete_session.py  generate_ai_response.py  get_message.py  get_messages.py  get_session.py  get_sessions.py  retrieve_context.py  update_session.py  upload_document.py
src/tests/api/: test_messages_api.py  test_sessions_api.py
(+15 files in other folders)
